// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<div
  className="expense-list"
>
  <div
    className="expense-list__box"
  >
    <div
      className="expense-list__header"
    >
      <h3>
        Expense
      </h3>
      <h3>
        Amount
      </h3>
    </div>
    <div
      className="expense-list-item"
    >
      No expenses
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="expense-list"
>
  <div
    className="expense-list__box"
  >
    <div
      className="expense-list__header"
    >
      <h3>
        Expense
      </h3>
      <h3>
        Amount
      </h3>
    </div>
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-1000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
